@@ -1,6 +1,5 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KAuthorized {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
 	using System.Collections.Generic;
@@ -8,10 +7,10 @@ namespace KAuthorized {
 	///  Extracted from kapplication (3.x). Kiosk authorization framework
 	/// </remarks>		<short>    Extracted from kapplication (3.</short>
 	[SmokeClass("KAuthorized")]
-	public class Global {
+	public class KAuthorized {
 		private static SmokeInvocation staticInterceptor = null;
-		static Global() {
-			staticInterceptor = new SmokeInvocation(typeof(Global), null);
+		static KAuthorized() {
+			staticInterceptor = new SmokeInvocation(typeof(KAuthorized), null);
 		}
 		/// <remarks>
 		///  Returns whether a certain action is authorized
