@@ -1,16 +1,15 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KColorUtils {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
 	/// <remarks>
 	///  A set of methods used to work with colors.
 	///  </remarks>		<short>    A set of methods used to work with colors.</short>
 	[SmokeClass("KColorUtils")]
-	public class Global {
+	public class KColorUtils {
 		private static SmokeInvocation staticInterceptor = null;
-		static Global() {
-			staticInterceptor = new SmokeInvocation(typeof(Global), null);
+		static KColorUtils() {
+			staticInterceptor = new SmokeInvocation(typeof(KColorUtils), null);
 		}
 		/// <remarks>
 		///  Calculate the luma of a color. Luma is weighted sum of gamma-adjusted
