@@ -1,15 +1,7 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KGlobal {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
-	/// <remarks>
-	///  For setLocale
-	///      </remarks>		<short>    For setLocale      </short>
-	public enum CopyCatalogs {
-		DoCopyCatalogs = 0,
-		DontCopyCatalogs = 1,
-	}
 	/// <remarks>
 	///  Access to the KDE global objects.
 	///  KGlobal provides you with pointers of many central
@@ -20,10 +12,17 @@ namespace KGlobal {
 	/// 		<short>    Access to the KDE global objects.</short>
 	/// 		<see> KStaticDeleterBase</see>
 	[SmokeClass("KGlobal")]
-	public class Global {
+	public class KGlobal {
 		private static SmokeInvocation staticInterceptor = null;
-		static Global() {
-			staticInterceptor = new SmokeInvocation(typeof(Global), null);
+		static KGlobal() {
+			staticInterceptor = new SmokeInvocation(typeof(KGlobal), null);
+		}
+		/// <remarks>
+		///  For setLocale
+		///      </remarks>		<short>    For setLocale      </short>
+		public enum CopyCatalogs {
+			DoCopyCatalogs = 0,
+			DontCopyCatalogs = 1,
 		}
 		/// <remarks>
 		///  Returns the global component data.  There is always at least
