@@ -1,6 +1,5 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KInputDialog {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
 	using System.Runtime.InteropServices;
@@ -13,10 +12,10 @@ namespace KInputDialog {
 	///  </author>
 	/// 		<short>    The KInputDialog namespace provides simple dialogs to get a single value  from the user.</short>
 	[SmokeClass("KInputDialog")]
-	public class Global {
+	public class KInputDialog {
 		private static SmokeInvocation staticInterceptor = null;
-		static Global() {
-			staticInterceptor = new SmokeInvocation(typeof(Global), null);
+		static KInputDialog() {
+			staticInterceptor = new SmokeInvocation(typeof(KInputDialog), null);
 		}
 		/// <remarks>
 		///  Static convenience function to get a string from the user.
