@@ -1,6 +1,5 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KMacroExpander {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
 	/// <remarks>
@@ -8,7 +7,7 @@ namespace KMacroExpander {
 	///  optionally with quoting appropriate for shell execution.
 	///  </remarks>		<short>    A group of functions providing macro expansion (substitution) in strings,  optionally with quoting appropriate for shell execution.</short>
 	[SmokeClass("KMacroExpander")]
-	public class Global {
+	public class KMacroExpander {
 		// QString expandMacros(const QString& arg1,const QHash<QChar, QString>& arg2,QChar arg3); >>>> NOT CONVERTED
 		// QString expandMacros(const QString& arg1,const QHash<QChar, QString>& arg2); >>>> NOT CONVERTED
 		// QString expandMacrosShellQuote(const QString& arg1,const QHash<QChar, QString>& arg2,QChar arg3); >>>> NOT CONVERTED
