@@ -1,9 +1,0 @@
-//Auto-generated by kalyptus. DO NOT EDIT.
-namespace KSettings {
-	using Kimono;
-	using System;
-	using Qyoto;
-	[SmokeClass("KSettings")]
-	public class Global {
-	}
-}
