@@ -1,80 +1,8 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KStandardAction {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
 	using System.Collections.Generic;
-	/// <remarks>
-	///  The standard menubar and toolbar actions.
-	///    </remarks>		<short>    The standard menubar and toolbar actions.</short>
-	public enum StandardAction {
-		ActionNone = 0,
-		New = 1,
-		Open = 2,
-		OpenRecent = 3,
-		Save = 4,
-		SaveAs = 5,
-		Revert = 6,
-		Close = 7,
-		Print = 8,
-		PrintPreview = 9,
-		Mail = 10,
-		Quit = 11,
-		Undo = 12,
-		Redo = 13,
-		Cut = 14,
-		Copy = 15,
-		Paste = 16,
-		SelectAll = 17,
-		Deselect = 18,
-		Find = 19,
-		FindNext = 20,
-		FindPrev = 21,
-		Replace = 22,
-		ActualSize = 23,
-		FitToPage = 24,
-		FitToWidth = 25,
-		FitToHeight = 26,
-		ZoomIn = 27,
-		ZoomOut = 28,
-		Zoom = 29,
-		Redisplay = 30,
-		Up = 31,
-		Back = 32,
-		Forward = 33,
-		Home = 34,
-		Prior = 35,
-		Next = 36,
-		Goto = 37,
-		GotoPage = 38,
-		GotoLine = 39,
-		FirstPage = 40,
-		LastPage = 41,
-		DocumentBack = 42,
-		DocumentForward = 43,
-		AddBookmark = 44,
-		EditBookmarks = 45,
-		Spelling = 46,
-		ShowMenubar = 47,
-		ShowToolbar = 48,
-		ShowStatusbar = 49,
-		SaveOptions = 50,
-		KeyBindings = 51,
-		Preferences = 52,
-		ConfigureToolbars = 53,
-		Help = 54,
-		HelpContents = 55,
-		WhatsThis = 56,
-		ReportBug = 57,
-		AboutApp = 58,
-		AboutKDE = 59,
-		TipofDay = 60,
-		ConfigureNotifications = 61,
-		FullScreen = 62,
-		Clear = 63,
-		PasteText = 64,
-		SwitchApplicationLanguage = 65,
-	}
 	/// <remarks>
 	///  Convenience methods to access all standard KDE actions.
 	///  These actions should be used instead of hardcoding menubar and
@@ -143,10 +71,81 @@ namespace KStandardAction {
 	/// 		<short>    Convenience methods to access all standard KDE actions.</short>
 	/// 		<see> http://developer.kde.org/documentation/standards/kde/style/basics/index.html</see>
 	[SmokeClass("KStandardAction")]
-	public class Global {
+	public class KStandardAction {
 		private static SmokeInvocation staticInterceptor = null;
-		static Global() {
-			staticInterceptor = new SmokeInvocation(typeof(Global), null);
+		static KStandardAction() {
+			staticInterceptor = new SmokeInvocation(typeof(KStandardAction), null);
+		}
+		/// <remarks>
+		///  The standard menubar and toolbar actions.
+		///    </remarks>		<short>    The standard menubar and toolbar actions.</short>
+		public enum StandardAction {
+			ActionNone = 0,
+			New = 1,
+			Open = 2,
+			OpenRecent = 3,
+			Save = 4,
+			SaveAs = 5,
+			Revert = 6,
+			Close = 7,
+			Print = 8,
+			PrintPreview = 9,
+			Mail = 10,
+			Quit = 11,
+			Undo = 12,
+			Redo = 13,
+			Cut = 14,
+			Copy = 15,
+			Paste = 16,
+			SelectAll = 17,
+			Deselect = 18,
+			Find = 19,
+			FindNext = 20,
+			FindPrev = 21,
+			Replace = 22,
+			ActualSize = 23,
+			FitToPage = 24,
+			FitToWidth = 25,
+			FitToHeight = 26,
+			ZoomIn = 27,
+			ZoomOut = 28,
+			Zoom = 29,
+			Redisplay = 30,
+			Up = 31,
+			Back = 32,
+			Forward = 33,
+			Home = 34,
+			Prior = 35,
+			Next = 36,
+			Goto = 37,
+			GotoPage = 38,
+			GotoLine = 39,
+			FirstPage = 40,
+			LastPage = 41,
+			DocumentBack = 42,
+			DocumentForward = 43,
+			AddBookmark = 44,
+			EditBookmarks = 45,
+			Spelling = 46,
+			ShowMenubar = 47,
+			ShowToolbar = 48,
+			ShowStatusbar = 49,
+			SaveOptions = 50,
+			KeyBindings = 51,
+			Preferences = 52,
+			ConfigureToolbars = 53,
+			Help = 54,
+			HelpContents = 55,
+			WhatsThis = 56,
+			ReportBug = 57,
+			AboutApp = 58,
+			AboutKDE = 59,
+			TipofDay = 60,
+			ConfigureNotifications = 61,
+			FullScreen = 62,
+			Clear = 63,
+			PasteText = 64,
+			SwitchApplicationLanguage = 65,
 		}
 		/// <remarks>
 		///  Creates an action corresponding to the
