@@ -1,50 +1,7 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KStandardGuiItem {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
-	/// <remarks>
-	///  The back and forward items by default use the RTL settings for Hebrew
-	///  and Arab countries. If you want those actions to ignore the RTL value
-	///  and force 'Western' behavior instead, use the IgnoreRTL value instead.
-	///      </remarks>		<short>    The back and forward items by default use the RTL settings for Hebrew  and Arab countries.</short>
-	public enum BidiMode {
-		UseRTL = 0,
-		IgnoreRTL = 1,
-	}
-	public enum StandardItem {
-		Ok = 1,
-		Cancel = 2,
-		Yes = 3,
-		No = 4,
-		Discard = 5,
-		Save = 6,
-		DontSave = 7,
-		SaveAs = 8,
-		Apply = 9,
-		Clear = 10,
-		Help = 11,
-		Defaults = 12,
-		Close = 13,
-		Back = 14,
-		Forward = 15,
-		Print = 16,
-		Continue = 17,
-		Open = 18,
-		Quit = 19,
-		AdminMode = 20,
-		Reset = 21,
-		Delete = 22,
-		Insert = 23,
-		Configure = 24,
-		Find = 25,
-		Stop = 26,
-		Add = 27,
-		Remove = 28,
-		Test = 29,
-		Properties = 30,
-		Overwrite = 31,
-	}
 	/// <remarks>
 	///  The various KDEUI_EXPORT methods returns standardized <see cref="KGuiItem"></see>'s
 	///  conforming to the KDE UI Standards. Use them instead of creating
@@ -53,10 +10,52 @@ namespace KStandardGuiItem {
 	///  </author>
 	/// 		<short> Provides a set of standardized KGuiItems. </short>
 	[SmokeClass("KStandardGuiItem")]
-	public class Global {
+	public class KStandardGuiItem {
 		private static SmokeInvocation staticInterceptor = null;
-		static Global() {
-			staticInterceptor = new SmokeInvocation(typeof(Global), null);
+		static KStandardGuiItem() {
+			staticInterceptor = new SmokeInvocation(typeof(KStandardGuiItem), null);
+		}
+		/// <remarks>
+		///  The back and forward items by default use the RTL settings for Hebrew
+		///  and Arab countries. If you want those actions to ignore the RTL value
+		///  and force 'Western' behavior instead, use the IgnoreRTL value instead.
+		///      </remarks>		<short>    The back and forward items by default use the RTL settings for Hebrew  and Arab countries.</short>
+		public enum BidiMode {
+			UseRTL = 0,
+			IgnoreRTL = 1,
+		}
+		public enum StandardItem {
+			Ok = 1,
+			Cancel = 2,
+			Yes = 3,
+			No = 4,
+			Discard = 5,
+			Save = 6,
+			DontSave = 7,
+			SaveAs = 8,
+			Apply = 9,
+			Clear = 10,
+			Help = 11,
+			Defaults = 12,
+			Close = 13,
+			Back = 14,
+			Forward = 15,
+			Print = 16,
+			Continue = 17,
+			Open = 18,
+			Quit = 19,
+			AdminMode = 20,
+			Reset = 21,
+			Delete = 22,
+			Insert = 23,
+			Configure = 24,
+			Find = 25,
+			Stop = 26,
+			Add = 27,
+			Remove = 28,
+			Test = 29,
+			Properties = 30,
+			Overwrite = 31,
 		}
 		/// <remarks>
 		///  Returns the gui item for the given identifier @param id.
