@@ -1,64 +1,7 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KStandardShortcut {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
-	/// <remarks>
-	///  Defines the identifier of all standard accelerators.
-	///    </remarks>		<short>    Defines the identifier of all standard accelerators.</short>
-	public enum StandardShortcut {
-		AccelNone = 0,
-		Open = 1,
-		New = 2,
-		Close = 3,
-		Save = 4,
-		Print = 5,
-		Quit = 6,
-		Undo = 7,
-		Redo = 8,
-		Cut = 9,
-		Copy = 10,
-		Paste = 11,
-		PasteSelection = 12,
-		SelectAll = 13,
-		Deselect = 14,
-		DeleteWordBack = 15,
-		DeleteWordForward = 16,
-		Find = 17,
-		FindNext = 18,
-		FindPrev = 19,
-		Replace = 20,
-		Home = 21,
-		Begin = 22,
-		End = 23,
-		Prior = 24,
-		Next = 25,
-		Up = 26,
-		Back = 27,
-		Forward = 28,
-		Reload = 29,
-		BeginningOfLine = 30,
-		EndOfLine = 31,
-		GotoLine = 32,
-		BackwardWord = 33,
-		ForwardWord = 34,
-		AddBookmark = 35,
-		ZoomIn = 36,
-		ZoomOut = 37,
-		FullScreen = 38,
-		ShowMenubar = 39,
-		TabNext = 40,
-		TabPrev = 41,
-		Help = 42,
-		WhatsThis = 43,
-		TextCompletion = 44,
-		PrevCompletion = 45,
-		NextCompletion = 46,
-		SubstringCompletion = 47,
-		RotateUp = 48,
-		RotateDown = 49,
-		StandardShortcutCount = 50,
-	}
 	/// <remarks>
 	///  \namespace KStandardShortcut
 	///  Convenient methods for access to the common accelerator keys in
@@ -67,10 +10,66 @@ namespace KStandardShortcut {
 	///  so do not hardcode the default behavior.
 	///  </remarks>		<short>    \namespace KStandardShortcut  Convenient methods for access to the common accelerator keys in  the key configuration.</short>
 	[SmokeClass("KStandardShortcut")]
-	public class Global {
+	public class KStandardShortcut {
 		private static SmokeInvocation staticInterceptor = null;
-		static Global() {
-			staticInterceptor = new SmokeInvocation(typeof(Global), null);
+		static KStandardShortcut() {
+			staticInterceptor = new SmokeInvocation(typeof(KStandardShortcut), null);
+		}
+		/// <remarks>
+		///  Defines the identifier of all standard accelerators.
+		///    </remarks>		<short>    Defines the identifier of all standard accelerators.</short>
+		public enum StandardShortcut {
+			AccelNone = 0,
+			Open = 1,
+			New = 2,
+			Close = 3,
+			Save = 4,
+			Print = 5,
+			Quit = 6,
+			Undo = 7,
+			Redo = 8,
+			Cut = 9,
+			Copy = 10,
+			Paste = 11,
+			PasteSelection = 12,
+			SelectAll = 13,
+			Deselect = 14,
+			DeleteWordBack = 15,
+			DeleteWordForward = 16,
+			Find = 17,
+			FindNext = 18,
+			FindPrev = 19,
+			Replace = 20,
+			Home = 21,
+			Begin = 22,
+			End = 23,
+			Prior = 24,
+			Next = 25,
+			Up = 26,
+			Back = 27,
+			Forward = 28,
+			Reload = 29,
+			BeginningOfLine = 30,
+			EndOfLine = 31,
+			GotoLine = 32,
+			BackwardWord = 33,
+			ForwardWord = 34,
+			AddBookmark = 35,
+			ZoomIn = 36,
+			ZoomOut = 37,
+			FullScreen = 38,
+			ShowMenubar = 39,
+			TabNext = 40,
+			TabPrev = 41,
+			Help = 42,
+			WhatsThis = 43,
+			TextCompletion = 44,
+			PrevCompletion = 45,
+			NextCompletion = 46,
+			SubstringCompletion = 47,
+			RotateUp = 48,
+			RotateDown = 49,
+			StandardShortcutCount = 50,
 		}
 		/// <remarks>
 		///  Returns the keybinding for <code>accel.</code>
