@@ -1,6 +1,5 @@
 //Auto-generated by kalyptus. DO NOT EDIT.
-namespace KStringHandler {
-	using Kimono;
+namespace Kimono {
 	using System;
 	using Qyoto;
 	using System.Collections.Generic;
@@ -26,10 +25,10 @@ namespace KStringHandler {
 	/// 		<short> Namespace for manipulating words and sentences in strings.</short>
 	/// 		<see> KShell</see>
 	[SmokeClass("KStringHandler")]
-	public class Global {
+	public class KStringHandler {
 		private static SmokeInvocation staticInterceptor = null;
-		static Global() {
-			staticInterceptor = new SmokeInvocation(typeof(Global), null);
+		static KStringHandler() {
+			staticInterceptor = new SmokeInvocation(typeof(KStringHandler), null);
 		}
 		/// <remarks> Capitalizes each word in the string
 		///  "hello there" becomes "Hello There"        (string)
